--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,31 @@
 <h1>商品検索</h1>
 
 <%# search_form_forメソッドの引数に @pオブジェクトを持ってくる。 %>
-<%# eq は equal の略称で、条件に該当するもの(=選択した商品名に合致するもの)を検索する。 %>
+
+<%# collection_selectメソッドの引数は、第一引数, 第二引数, 第三引数, 第四引数, 第五引数, オプション %>
+<%# 第一引数にはメソッドを。eq は equal の略称で、条件に該当するもの(=選択した商品名に合致するもの)を検索する。 %>
+<%# 第二引数にはオブジェクトを %>
+<%# 第三引数には値を %>
+<%# 第四引数には値の名前を %>
+<%# オプションinclude_blankには何も選択していない時に表示される文字を %>
 
 <%= search_form_for @p ,url: products_search_path do |f| %>
   <%= f.label :name_eq, '商品名' %>
   <%= f.collection_select :name_eq, @product_name, :name, :name, include_blank: '指定なし' %>
     <br>
+  <%= f.label :size_eq, 'サイズ：' %>
+  <%= f.collection_select :size_eq, @product_size, :size, :size, include_blank: '指定なし' %>
+    <br>
+  <%= f.label :status_eq, '商品状態：' %>
+  <%= f.collection_select :status_eq, @product_status, :status, :status, include_blank: '指定なし' %>
+    <br>
+  <%= f.label :category_name_eq, 'カテゴリー：' %>
+  <%= f.collection_select :category_name_eq, @category_name, :name, :name, include_blank: '指定なし' %>
+    <br>
   <%= f.submit '検索' %>
 <% end %>
 
+<%# 商品の一覧表示 %>
 <% @products.each do |product| %>
   <br>
   <li>
@@ -20,10 +36,3 @@
   <%= product.category.name %>
   </li>
 <% end %>
-
-<%# collection_selectの引数は、第一引数, 第二引数, 第三引数, 第四引数, 第五引数, オプション %>
-<%# 第一引数はメソッド %>
-<%# 第二引数はオブジェクト %>
-<%# 第三引数は値 %>
-<%# 第四引数は値の名前 %>
-<%# オプションinclude_blankは何も選択していない時に表示される文字 %>
