--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,6 +9,8 @@
 <%# 第四引数には値の名前を %>
 <%# オプションinclude_blankには何も選択していない時に表示される文字を %>
 
+<%# _lteq とは、〜以下 という意味 %>
+
 <%= search_form_for @p ,url: products_search_path do |f| %>
   <%= f.label :name_eq, '商品名' %>
   <%= f.collection_select :name_eq, @product_name, :name, :name, include_blank: '指定なし' %>
@@ -21,6 +23,16 @@
     <br>
   <%= f.label :category_name_eq, 'カテゴリー：' %>
   <%= f.collection_select :category_name_eq, @category_name, :name, :name, include_blank: '指定なし' %>
+    <br>
+  <%= f.label :price_eq, '価格：' %>
+  <%= f.radio_button :price_lteq, '' %>
+  指定なし
+  <%= f.radio_button :price_lteq, '1000' %>
+  1000円以下
+  <%= f.radio_button :price_lteq, '2500' %>
+  2500円以下
+  <%= f.radio_button :price_lteq, '5000' %>
+  5000円以下
     <br>
   <%= f.submit '検索' %>
 <% end %>
